waypoint/service.yml
apiVersion: v1
kind: Service
metadata:
  name: waypoint
  namespace: waypoint
spec:
  ports:
    - name: grpc
      port: 9701
      protocol: TCP
      targetPort: 9701
    - name: http
      port: 9702
      protocol: TCP
      targetPort: 9702
  selector:
    app: waypoint-server
  sessionAffinity: None
  type: ClusterIP
