waypoint/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: GRPCS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: waypoint-grpc
  name: waypoint-grpc
  namespace: waypoint
spec:
  rules:
    - host: waypoint-grpc.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              serviceName: waypoint
              servicePort: grpc
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - waypoint-grpc.127.0.0.1.nip.io
      secretName: waypoint-grpc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    app: waypoint-ui
  name: waypoint-ui
  namespace: waypoint
spec:
  rules:
    - host: waypoint-ui.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              serviceName: waypoint
              servicePort: http
            path: /
            pathType: ImplementationSpecific
